# flake8-walrus

./: .pre-commit-config.yaml  README.md  azure-pipelines.yml  flake8_walrus.py  setup.cfg  tox.ini
.github/workflows/: main.yml
tests/: flake8_walrus_test.py
