[metadata]
name = flake8_walrus
version = 1.2.0
description = flake8 plugin which forbids assignment expressions (the walrus operator)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/flake8-walrus
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_walrus
install_requires =
    flake8>=5.0
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    ASN=flake8_walrus:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
